first complete version for project report finished

--- a/report.tex
+++ b/report.tex
@@ -61,6 +61,7 @@
 \input{sections/related-work.tex}
 \input{sections/architecture.tex}
 \input{sections/evaluation.tex}
+\newpage
 \input{sections/conclusions.tex}
 \newpage
 \appendix
