--- a/sections/appendix.tex
+++ b/sections/appendix.tex
@@ -6,6 +6,32 @@
 Appendix files and refs will go here.
 Such as your thesis work scheduling. 
 
-\subsection{Work Scheduling Example} % (fold)
-\label{sub:work_scheduling}
-Simple work schedule is presented in Table~\ref{tab:worktable}. You can do something more fancy link a Gantt chart or whatever.
+\subsection{Appendix A - Work Scheduling Plan} 
+
+\vspace{10mm}
+
+\subsection{Appendix B - COBIT 5 Processes by domain} 
+
+The next figure presents the management and governance processes from COBIT 5 process framework, presented by domain.
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{img/COBIT5ProcessFramework.png}
+\caption{COBIT 5 Processes. Extracted from \cite{2012cobit}.}
+\end{figure}
+
+\vspace{10mm}
+
+\subsection{Appendix C - ISO 19011 Audit Programme Management process} 
+
+The next figure presents the process flow purposed by ISO 19011 International standard for Audit programmes management.
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{img/ISO19011AuditProcess.png}
+\caption{ISO 19011 Audit Programme Management process. Extracted from \cite{ISO19011}.}
+\end{figure}
+
+
+
+
