--- a/sections/conclusions.tex
+++ b/sections/conclusions.tex
@@ -7,6 +7,6 @@
 \section{Conclusions}
 
 In this project we purpose to design a process framework for project execution and evolving maintenance requests management inside a Information Systems administration of an organization. This framework will be supported by a set of artifacts and a responsibility structure. We also pretend to design a logical application architecture considering PPM and ITSM tools to support the process framework implementation.\par
-We analyzed the COBIT, ITIL and PMBOK frameworks, considered by professionals in the area the most important on IT Governance and Management processes, with the objective to extract the most important guidances on management processes of interest for the processes to design. This frameworks are complex and extensive, being necessary to consider only the process areas that bring added-value for this project. We also considered a set of international standards on IT service, Risk, Information Security and Audit Management to complement our knowledge on this areas.\par
-Considering we pretend to develop a logical application architecture we also made a state of the art in PPM and ITSM solutions available in the market, evaluated using Gartner and Forrester research and advisory methodologies. This methodologies allowed us to come with a proposal of PPM and ITSM solutions to use.\par
-As future work, we pretend to design the process framework considering the processes scope presented in this project, as well as to provide a logical application architecture to support this framework. We also want to apply this framework to a Information Systems department of a real-case organization, demonstrating the appliance of our solution and evaluating its performance. In Appendix section XXX we present a Gantt chart with these activities scheduled in time.\par 
+We analyzed COBIT, ITIL and PMBOK frameworks, considered by professionals in the area the most important on IT Governance and Management processes, with the objective to extract the most important guidances on management processes. This frameworks are complex and extensive, being necessary to consider only the process areas that bring added-value for this project and are requested by the stakeholders. We also considered a set of international standards on IT service, Risk, Information Security and Audit Management to complement our knowledge on this areas.\par
+Considering we pretend to develop a logical application architecture we also made a state of the art in PPM and ITSM solutions available in the market, evaluated using Gartner and Forrester research methodologies. This methodologies allowed us to come with a proposal of PPM and ITSM solutions to use.\par
+As future work, we pretend to design the process framework considering the processes scope presented in this project, as well as to provide a logical application architecture to support this framework. We also want to apply this framework to a Information Systems department of a real-case organization, demonstrating the appliance of our solution and evaluating its performance. In Appendix A we present a Gantt chart with these activities scheduled in time.\par 
