--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -61,7 +61,7 @@ Figure 2 presents the COBIT 5 enablers previous defined and how they relate amon
 \end{figure}
 
 Considering figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
-All processes for management and governance are presented in the Appendix section X and all the implementation details explained in COBIT 5: Enabling Processes\cite{2012cobitEP}, a detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation, governance and management practices, and the process reference model.\par
+All processes for management and governance are presented in the Appendix B and all the implementation details explained in COBIT 5: Enabling Processes\cite{2012cobitEP}, a detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation, governance and management practices, and the process reference model.\par
 Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
 
 \begin{figure}[h!]
@@ -87,7 +87,7 @@ Currently on version 1.3, it defines areas of interest that group collections of
 
 \end{itemize}
 
-For this areas of interest, CMMI defines 22 core process areas, covering processes that are fundamental to improve the organization's processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement. The process areas are presented in Appendix section X.\par
+For this areas of interest, CMMI defines 16 core process areas, covering processes that are fundamental to improve the organization's processes. Each one of the areas is a set of related practices that, when implemented, will achieve goals important for process improvement.\par
 CMMI supports two types of improvement paths, depending on the organization objectives. One is used for the organization to improve processes related to a specific process area, named the continuous representation, and the other one is used for organizations to improve a set of relating processes by incrementally consider sets of process areas, named the staged representation. As stated by CMMI, the continuous representation will allow to achieve capability levels and the staged representation will achieve maturity levels.\par
 For the staged representation, the following capability levels are defined:
 
@@ -363,7 +363,7 @@ The relevance of ISO 31000 for this project focuses on its orientation to an imp
 \subsection{ISO 19011}
 
 As defined by this International Standard \cite{ISO19011}, \textit{``ISO 19011 provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.''}.\par
-In Appendix's section X it is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for our project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
+In Appendix C it is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for our project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
 
 
 \section{A State of the Art in Market Solutions}
@@ -399,7 +399,7 @@ This methodology is fundamental to analyze technology providers we can consider 
 
 \subsubsection{Gartner MarketScope}
 
-Gartner MarketScope methodology\cite{GartnerMarketScope} is used for analyzing solutions for emerging markets with changing requirements. Gartner Magic Quadrant is not suitable for this type of markets as far as a competitive positioning is not useful and accurate for an growing and changing market. Thus, MarketScope intents to understand how the status of an emerging market aligns with clients state of maturity and future plans. It helps evaluating participating technology providers against the Gartner vision for that market. MarketScopes rate each market’s participating technology providers as Strong Positive, Positive, Promising, Caution or Strong Negative.\par
+Gartner MarketScope methodology\cite{GartnerMarketScope} is used for analyzing solutions for emerging markets with changing requirements. Gartner Magic Quadrant is not suitable for this type of markets as far as a competitive positioning is not useful and accurate for an growing and changing market. Thus, MarketScope intents to understand how the status of an emerging market aligns with clients state of maturity and future plans. It helps evaluating participating technology providers against the Gartner vision for that market. MarketScopes rate each market's participating technology providers as Strong Positive, Positive, Promising, Caution or Strong Negative.\par
 
 \subsubsection{Gartner Critical Capabilities}
 
@@ -466,7 +466,7 @@ The Magic Quadrant document\cite{magicQuadrantPPM} also provides some insight on
 
 For this magic quadrant, based on our project objectives, we will consider only the quadrant for the leaders taking in account we are looking for the most complete solution on all PPM market areas. For the leaders quadrant, we have product depth in the whole PPM core areas like demand management and analysis, advanced scheduling, resource and cost management and portfolio analysis, establishing a big difference to the challengers quadrant, where only some of them are fully addressed.\par
 Leaders also offer different multiple deployment options, as staged implementations, hosted or SaaS, making its solutions more flexible and applicable to different organization realities. Leaders share many attributes with visionaries or challengers, but they establish differentiation with high ratings in many areas.\par
-The leaders quadrant is composed by Planview with the product Planview Enterprise, Compuware with ChangePoint, CA with CA Clarity EPM, HP with HP PPM Center, Microsoft with EPM and Oracle with Primavera. In Appendix, section X, we present the main strengths and cautions for each one of this solutions, based on Gartner's analysis.
+The leaders quadrant is composed by Planview with the product Planview Enterprise, Compuware with ChangePoint, CA with CA Clarity EPM, HP with HP PPM Center, Microsoft with EPM and Oracle with Primavera. In \cite{magicQuadrantPPM} we present the main strengths and cautions for each one of this solutions, based on Gartner's analysis.
 
 
 \subsubsection{Gartner MarketScope for IT Project and Portfolio Management Software Applications}
@@ -492,7 +492,7 @@ Innovation & High \\ \hline
 Market Understanding & High \\ \hline
 Market Responsiveness and Track Record & High \\ \hline
 \end{tabular}
-\vspace{1mm}
+\vspace{2mm}
 \caption{Gartner MarketScope for IT Project and Portfolio Management Software Applications Evaluation Criteria. Adapted from \cite{MarketScopePPM}.}
 \label{my-label}
 \end{table}
